log
Sat, Apr 19, 2025 12:06:41 AM: 
 hashmap.c | 72 +++++++++++++++++++++++++++++++++++++++++++++++++++++++--------
 1 file changed, 63 insertions(+), 9 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:74:32: error: implicit declaration of function 'mallcoc' [-Werror=implicit-function-declaration]
     HashMap *mapa = (HashMap *)mallcoc(sizeof(HashMap));
                                ^~~~~~~
cc1.exe: all warnings being treated as errors
eeef3b7
Sat, Apr 19, 2025 12:07:45 AM: 
 hashmap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:69:10: error: unused variable 'old_capacity' [-Werror=unused-variable]
     long old_capacity = map->capacity;
          ^~~~~~~~~~~~
hashmap.c:68:13: error: unused variable 'old_buckets' [-Werror=unused-variable]
     Pair ** old_buckets = map->buckets;
             ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
abefac6
Sat, Apr 19, 2025 12:08:28 AM: 
 hashmap.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
Compilation failed
test.c: In function 'enlarge':
test.c:453:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:453:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:217:5: error: 'insert_test5' defined but not used [-Werror=unused-function]
 int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
     ^~~~~~~~~~~~
test.c:131:6: error: 'compare_test' defined but not used [-Werror=unused-function]
 void compare_test(){
      ^~~~~~~~~~~~
test.c:125:6: error: 'hash_test3' defined but not used [-Werror=unused-function]
 void hash_test3(){ //no random
      ^~~~~~~~~~
test.c:111:6: error: 'hash_test2' defined but not used [-Werror=unused-function]
 void hash_test2(){ // colisiones
      ^~~~~~~~~~
test.c:100:6: error: 'hash_test1' defined but not used [-Werror=unused-function]
 void hash_test1(){ // posición válida
      ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
d976164
Sat, Apr 19, 2025 12:09:03 AM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
b2a6d71
Sat, Apr 19, 2025 12:12:51 AM: 
 hashmap.c | 20 ++++++++++----------
 1 file changed, 10 insertions(+), 10 deletions(-)
 tests:  1|5
total_score: 10/70
04faf7b
Sat, Apr 19, 2025 12:14:36 AM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
133e2b2
Sat, Apr 19, 2025 12:15:03 AM: 
 hashmap.c | 32 ++++++++++++++++----------------
 1 file changed, 16 insertions(+), 16 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:56:30: error: 'Pair {aka struct Pair}' has no member named 'next'
             current = current->next;
                              ^~
hashmap.c:58:12: error: 'Pair {aka struct Pair}' has no member named 'next'
         new->next = map->buckets[index]; //insert at the beginning of the list
            ^~
3352bcc
Sat, Apr 19, 2025 12:17:58 AM: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
6e3347a
Sat, Apr 19, 2025 12:23:46 AM: 
 hashmap.c | 30 +++++++++++++-----------------
 1 file changed, 13 insertions(+), 17 deletions(-)
Compilation failed
test.c: In function 'insertMap':
test.c:453:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:453:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:217:5: error: 'insert_test5' defined but not used [-Werror=unused-function]
 int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
     ^~~~~~~~~~~~
test.c:131:6: error: 'compare_test' defined but not used [-Werror=unused-function]
 void compare_test(){
      ^~~~~~~~~~~~
test.c:125:6: error: 'hash_test3' defined but not used [-Werror=unused-function]
 void hash_test3(){ //no random
      ^~~~~~~~~~
test.c:111:6: error: 'hash_test2' defined but not used [-Werror=unused-function]
 void hash_test2(){ // colisiones
      ^~~~~~~~~~
test.c:100:6: error: 'hash_test1' defined but not used [-Werror=unused-function]
 void hash_test1(){ // posición válida
      ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
4c70c45
Sat, Apr 19, 2025 12:24:46 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 30/70
5063128
Sat, Apr 19, 2025 12:31:56 AM: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  6|4
total_score: 30/70
a741949
Sat, Apr 19, 2025 12:32:22 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
e4bf0ed
Sat, Apr 19, 2025 12:33:04 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
e67702f
Sat, Apr 19, 2025 12:33:23 AM: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  6|4
total_score: 30/70
9a6e6f8
Sat, Apr 19, 2025 12:34:23 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
f5c7273
Sat, Apr 19, 2025 12:37:40 AM: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
36a71f8
Sat, Apr 19, 2025 12:40:55 AM: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  6|4
total_score: 30/70
8c23c5b
Sat, Apr 19, 2025 12:44:50 AM: 
 hashmap.c | 17 +++++++++++------
 1 file changed, 11 insertions(+), 6 deletions(-)
 tests:  8|3
total_score: 40/70
5c12d5c
Sat, Apr 19, 2025 12:59:09 AM: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
fd75b89
Sat, Apr 19, 2025  1:17:51 AM: 
 hashmap.c | 13 +++++--------
 1 file changed, 5 insertions(+), 8 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:90:10: error: unused variable 'start' [-Werror=unused-variable]
     long start = pos;
          ^~~~~
cc1.exe: all warnings being treated as errors
72c4bbb
Sat, Apr 19, 2025  1:18:08 AM: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  8|3
total_score: 40/70
6da4fdc
Sat, Apr 19, 2025  1:18:40 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|2
total_score: 50/70
12799ff
Sat, Apr 19, 2025  1:22:37 AM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  12|2
total_score: 50/70
a1f1973
